# Google-Calendar-Analysis

./: .gitignore  README.md  calendar_events_analysis.ipynb  calendar_parser.py  pyproject.toml
