[tool.poetry]
name = "calendar-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "calendar_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
jupyterlab = "^4.3.5"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
